tests/data/trace/extend.txt
Error: e0de436d-414e-594c-b834-c3f61fb0dcfe
RuntimeError: oops
Traceback (most resent call last):
-------------------------------------------------------------------------------
File: /workspaces/gufo_err/tests/test_traceback_samples.py (line 67)
   60         ],
   61     )
   62     def test_format(cfg: Dict[str, Any]) -> None:
   63         fmt = cfg.get("format", "terse")
   64         err = Err().setup(**cfg)
   65         cfg = {}  # Reset local vars
   66         try:
   67 ==>         entry()
                  ^^^^^^^
   68         except Exception:
   69             with log_capture() as buffer:
   70                 err.process()
   71                 output = buffer.getvalue()
   72         if RESAMPLE:
   73             set_sample(fmt, output)
   74         assert clean_config(output) == clean_config(get_sample(fmt))
Locals:
                 cfg = {}
                 fmt = 'extend'
                 err = <gufo.err.err.Err object at 0x7f16e9c18c10>
              buffer = <_io.StringIO object at 0x7f16e9be4a60>
-------------------------------------------------------------------------------
File: /workspaces/gufo_err/tests/sample/trace.py (line 15)
    8         x += 1
    9         oops()
   10     
   11     
   12     def entry():
   13         s = 2
   14         s += 1
   15 ==>     to_oops()
              ^^^^^^^^^
Locals:
                   s = 3
-------------------------------------------------------------------------------
File: /workspaces/gufo_err/tests/sample/trace.py (line 9)
    2         msg = "oops"
    3         raise RuntimeError(msg)
    4     
    5     
    6     def to_oops():
    7         x = 1
    8         x += 1
    9 ==>     oops()
              ^^^^^^
   10     
   11     
   12     def entry():
   13         s = 2
   14         s += 1
   15         to_oops()
Locals:
                   x = 2
-------------------------------------------------------------------------------
File: /workspaces/gufo_err/tests/sample/trace.py (line 3)
    1     def oops():
    2         msg = "oops"
    3 ==>     raise RuntimeError(msg)
              ^^^^^^^^^^^^^^^^^^^^^^^
    4     
    5     
    6     def to_oops():
    7         x = 1
    8         x += 1
    9         oops()
   10     
Locals:
                 msg = 'oops'
-------------------------------------------------------------------------------
